# Congressional-Trade-Analysis-Research-Project

./: .env.example  .gitignore  LICENSE  Makefile  PROJECT_SPEC.md  README.md  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: EquityCurveChart.tsx  MethodologyNotes.tsx  MetricsTable.tsx  NlpRoutingCard.tsx  OverviewCards.tsx  ProjectArchitecture.tsx  RecentTrades.tsx  RerunProcessButton.tsx  SenatorTable.tsx  SentimentBuckets.tsx  StateBlock.tsx
frontend/src/lib/: api.ts  format.ts  useApi.ts
notebooks/: exploration.ipynb
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/clean/: __init__.py  transform.py
src/features/: build.py
src/ingest/: __init__.py  congress.py  news.py  prices.py
src/nlp/: __init__.py  classify_finbert.py  classify_nb.py  embeddings.py  ensemble.py  llm_local.py  router.py
src/research/: __init__.py  backtest.py  eda.py
tests/: test_ensemble_scope.py
